--- a/HTML-CSS Intro/index.html
+++ b/HTML-CSS Intro/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- TODO: Link your stylesheet -->
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <p>Assignment 1</p>
